# website

./: .env  EXTENDED_PRODUCTION_CHECKLIST.md  PRODUCTION_CHECKLIST.md  README.md  UNIVERSAL_COMPLETION_CERTIFICATE.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy.yml
.lovable/: coherence-inference-plan.md  plan.md  v2-ontology-plan.md  v2-phases.md
docs/research/: atlas-bridge-protocol.md
dotgithub/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STANDARDS.md  root-README.md
dotgithub/.github/: pull_request_template.md
dotgithub/governance/: CHANGELOG.md  GOVERNANCE.md
public/: 404.html  agent-discovery.md  coi-serviceworker.js  llms-full.md  llms-full.txt  llms.md  llms.txt  openapi.json  robots.txt  sitemap.xml
public/.well-known/: ai-plugin.json  uor.json
public/contexts/: uor-v1.jsonld  uor-vocabulary.jsonld
public/cursor-rules/: uor-trust-stamp.mdc
public/rules/: uor-trust-stamp-windsurf.md
public/shapes/: uor-shapes.ttl
public/wasm/: uor_wasm_shim_bg.wasm
scripts/: generate-q0.ts  sync-crate.ts
src/: App.tsx  custom-sw.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CTASection.tsx  DevGate.tsx  Footer.tsx  FrameworkLayers.tsx  GalaxyAnimation.tsx  HeroSection.tsx  HighlightsSection.tsx  IntroSection.tsx  Layout.tsx  Navbar.tsx  PillarsSection.tsx  ProjectsShowcase.tsx  ScrollProgress.tsx  galaxy.css  (+3 more)
supabase/: config.toml
uor-os/: .env.example  README.md  package.json  tsconfig.json  vite.config.ts
(+2078 files in other folders)
